--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import '../styles/globals.css'
+import {Button} from '../components/ui/button.tsx';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1 class="text-4xl">Start here</h1>
+		<Button>Go</Button>
 	</main>
 </Layout>
 
