created initial pages for routing

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import '../styles/globals.css'
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1 class="text-4xl">Start here</h1>
+		<h1 class="text-4xl">About Page</h1>
 	</main>
 </Layout>
 
