--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import MainNavigation from '@/components/main-navigation';
 interface Props {
 	title: string;
 }
@@ -17,6 +18,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<MainNavigation />
 		<slot />
 	</body>
 </html>
