--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,12 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
 import '../styles/globals.css'
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1 class="text-4xl">Contact Page</h1>
-	</main>
+  <main>
+    <h1 class="text-4xl">Contact Page</h1>
+  </main>
 </Layout>
-
-
