styled main navigation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,5 @@ import '../styles/globals.css'
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
-    <h1 class="text-4xl">Start here</h1>
-  </main>
+  <main></main>
 </Layout>
