--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,12 @@
 
 @layer base {
   :root {
+    --custom-dark-grey: #5b7086;
+    --custom-primary: #296eb4;
+    --custom-light: #fefefe;
+    --custom-dark: #040a11;
+    --custom-dark-grey: #5b7086;
+    --custom-light-grey: #b3bfcb;
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
