--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import '../styles/globals.css'
+import HeroSection from '@/components/hero-section.astro'
 ---
 
 <Layout title="Welcome to Astro.">
-  <main></main>
+  <HeroSection />
 </Layout>
