initial project cards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import '../styles/globals.css'
-import HeroSection from '@/components/hero-section.astro'
+import HeroSection from '@/components/main/hero-section.astro'
+import ProjectsSection from '@/components/main/projects-section.astro'
 ---
 
 <Layout title="Welcome to Astro.">
   <HeroSection />
+  <ProjectsSection />
 </Layout>
