--- a/src/components/main/hero-section.astro
+++ b/src/components/main/hero-section.astro
@@ -1,5 +1,5 @@
 <section class="px-4 mt-40 max-w-[640px] mx-auto lg:max-w-[700px]">
-  <h1 class="text-5xl font-bold text-custom-dark-grey mb-2">Chris Harley</h1>
+  <h1 class="text-5xl font-bold text-custom-dark-grey mb-2">CHRIS HARLEY</h1>
   <h3 class="mb-8">UX DESIGNER</h3>
   <p class="leading-7">
     Lorem Ipsum has been the industry's standard dummy text ever since the
