--- a/src/components/main/project-card.astro
+++ b/src/components/main/project-card.astro
@@ -13,7 +13,14 @@ console.log(image)
 
 <div>
   <div class="mb-4 leading-7">
-    <Image src={image} alt={title} width="400" height="400" />
+    <Image
+      src={image}
+      alt={title}
+      height="500"
+      width="5000"
+      loading="lazy"
+      class="object-fill"
+    />
   </div>
   <h3 class="font-bold text-2xl text-custom-dark-grey mb-1">{title}</h3>
   <p>{description}</p>
