--- a/src/components/main/projects-section.astro
+++ b/src/components/main/projects-section.astro
@@ -3,7 +3,7 @@ import projectCardInfo from '@/data/project-card-info'
 import ProjectCard from './project-card.astro'
 ---
 
-<section class="mt-40 grid gap-20">
+<section class="mt-40 grid gap-20 px-4">
   {
     projectCardInfo.map((project) => (
       <ProjectCard
