--- a/src/components/main/projects-section.astro
+++ b/src/components/main/projects-section.astro
@@ -3,7 +3,9 @@ import projectCardInfo from '@/data/project-card-info'
 import ProjectCard from './project-card.astro'
 ---
 
-<section class="mt-40 grid gap-20 px-4">
+<section
+  class="mt-40 grid gap-20 px-4 max-w-[768px] mx-auto lg:grid-cols-2 lg:gap-8"
+>
   {
     projectCardInfo.map((project) => (
       <ProjectCard
