create truncate function for card details

--- a/src/components/main/project-card.astro
+++ b/src/components/main/project-card.astro
@@ -1,14 +1,8 @@
 ---
 import { Image } from 'astro:assets'
-
-type ProjectCardProps = {
-  title: string
-  image: string
-  description: string
-}
+import { truncate } from '../../lib/utils'
 
 const { title, image, description } = Astro.props
-console.log(image)
 ---
 
 <div>
@@ -23,5 +17,5 @@ console.log(image)
     />
   </div>
   <h3 class="font-bold text-2xl text-custom-dark-grey mb-1">{title}</h3>
-  <p>{description}</p>
+  <p>{truncate(description, 80)}</p>
 </div>
