complete styling for footer

--- a/src/components/main/projects-section.astro
+++ b/src/components/main/projects-section.astro
@@ -4,7 +4,7 @@ import ProjectCard from './project-card.astro'
 ---
 
 <section
-  class="mt-40 grid gap-20 px-4 max-w-[768px] mx-auto lg:grid-cols-2 lg:gap-8"
+  class="mt-40 grid gap-20 px-4 max-w-[768px] mx-auto lg:max-w-[1028px] lg:grid-cols-2 lg:gap-8"
 >
   {
     projectCardInfo.map((project) => (
