--- a/src/components/shared/footer.astro
+++ b/src/components/shared/footer.astro
@@ -2,10 +2,8 @@
 import footerSocialLinks from '../../data/footer-social-links'
 ---
 
-<footer class="mt-40 px-4">
-  <div
-    class="max-w-[768px] mx-auto lg:flex min-[780px]:px-4 lg:justify-between lg:max-w-[1028px]"
-  >
+<footer class="mt-20">
+  <div class="lg:flex lg:justify-between">
     <ul class="flex w-full justify-between mb-8 max-w-96">
       {
         footerSocialLinks.map((link) => (
@@ -20,7 +18,7 @@ import footerSocialLinks from '../../data/footer-social-links'
     <p class="mb-8">
       Designed & Developed <span>
         <a href="#top" class="text-custom-primary scroll-smooth"
-          >chrisharley.io</a
+          >chrisharley.io ↑</a
         >
       </span>
     </p>
