--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import ContactButton from '@/components/shared/contact-button.astro'
 import Layout from '../layouts/Layout.astro'
 import '../styles/globals.css'
 import HeroSection from '@/components/main/hero-section.astro'
@@ -8,4 +9,5 @@ import ProjectsSection from '@/components/main/projects-section.astro'
 <Layout title="Welcome to Astro.">
   <HeroSection />
   <ProjectsSection />
+  <ContactButton />
 </Layout>
