fix button color on hover, make contact button component reusable

--- a/src/components/shared/contact-button.astro
+++ b/src/components/shared/contact-button.astro
@@ -1,7 +1,9 @@
 ---
 import { Button } from '../ui/button'
+
+const { text } = Astro.props
 ---
 
 <Button className="mt-10">
-  <a href="/contact">Let's Chat, I'm open for work!</a>
+  <a href="/contact">{text}</a>
 </Button>
