--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,5 +9,5 @@ import ProjectsSection from '@/components/main/projects-section.astro'
 <Layout title="Welcome to Astro.">
   <HeroSection />
   <ProjectsSection />
-  <ContactButton />
+  <ContactButton text="Let's Chat, I'm open for work!" />
 </Layout>
