--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
     --custom-dark-grey: #5b7086;
     --custom-primary: #296eb4;
     --custom-light: #fefefe;
-    --custom-dark: #040a11;
+    --custom-dark: rgba(4, 10, 17, 1);
     --custom-dark-grey: #5b7086;
     --custom-light-grey: #b3bfcb;
     --background: 0 0% 100%;
