add cdn url to project card image component src

--- a/src/components/main/project-card.astro
+++ b/src/components/main/project-card.astro
@@ -3,6 +3,8 @@ import { Image } from 'astro:assets'
 import { truncate } from '../../lib/utils'
 
 const { title, image, description } = Astro.props
+
+console.log(typeof image)
 ---
 
 <div>
