--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import MainNavigation from '@/components/shared/main-navigation'
 import Footer from '@/components/shared/footer.astro'
+import { ViewTransitions } from 'astro:transitions'
 
 interface Props {
   title: string
@@ -18,11 +19,12 @@ const { title } = Astro.props
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
   <body class="text-custom-dark">
     <section
       id="layout"
-      class="mx-auto px-4 sm:max-w-[628px] md:max-w-[728px] lg:max-w-[1028px]"
+      class="mx-auto px-4 sm:max-w-[628px] md:max-w-[728px] lg:max-w-[1100px]"
     >
       <MainNavigation client:load />
       <slot />
