create education data file, add data to about page, style mobile

--- a/src/components/main/project-card.astro
+++ b/src/components/main/project-card.astro
@@ -14,7 +14,7 @@ console.log(typeof image)
       alt={title}
       height="500"
       width="5000"
-      loading="lazy"
+      loading="eager"
       class="object-fill"
     />
   </div>
