--- a/src/components/main/hero-section.astro
+++ b/src/components/main/hero-section.astro
@@ -1,4 +1,4 @@
-<section class="mt-20 max-w-[640px] mx-auto lg:max-w-[700px]">
+<section class="mt-20 max-w-[800px]">
   <h1 class="text-5xl font-bold text-custom-dark-grey mb-2">CHRIS HARLEY</h1>
   <h3 class="mb-4">UX DESIGNER</h3>
   <p class="leading-7">
