--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import { Button } from '@/components/ui/button'
   <!-- Info -->
   <section class="lg:grid lg:grid-cols-2 lg:gap-8 mb-20">
     <div class="mb-10">
-      <p>
+      <p class="leading-7">
         Lorem Ipsum has been the industry's standard dummy text ever since the
         1500s, when an unknown printer took a galley of type and scrambled it to
         make a type specimen book. It has survived not only five centuries, but
@@ -23,7 +23,7 @@ import { Button } from '@/components/ui/button'
         unchanged.
       </p>
       <br />
-      <p>
+      <p class="leading-7">
         Lorem Ipsum has been the industry's standard dummy text ever since the
         1500s, when an unknown printer took a galley of type and scrambled it to
         make a type specimen book. It has survived not only five centuries, but
@@ -31,7 +31,7 @@ import { Button } from '@/components/ui/button'
         unchanged.
       </p>
       <br />
-      <p>
+      <p class="leading-7">
         Lorem Ipsum has been the industry's standard dummy text ever since the
         1500s, when an unknown printer took a galley of type and scrambled it to
         make a type specimen book. It has survived not only five centuries, but
@@ -70,7 +70,7 @@ import { Button } from '@/components/ui/button'
 
     <!-- Experience  -->
     <section class="mb-20">
-      <h3 class="text-2xl text-custom-dark-grey font-bold mb-2">Education</h3>
+      <h3 class="text-2xl text-custom-dark-grey font-bold mb-2">Experience</h3>
       <hr class="mb-8" />
       <ul class="grid gap-8">
         {
@@ -92,7 +92,7 @@ import { Button } from '@/components/ui/button'
       <hr class="mb-8" />
       <div class="mb-8">
         <p class="font-bold mb-2">Design</p>
-        <p class="text-xs text-custom-dark-grey">
+        <p class="text-xs text-custom-dark-grey leading-7">
           UI/UX Design • Graphic Design • Creative Direction • Web Design •
           Brand Strategy • User Flows • High-fidelity Prototyping • Developer
           Hand-off • User Testing • Cross-platform Design (Mobile, Desktop) •
@@ -102,7 +102,7 @@ import { Button } from '@/components/ui/button'
       </div>
       <div>
         <p class="font-bold mb-2">Engineering</p>
-        <p class="text-xs text-custom-dark-grey">
+        <p class="text-xs text-custom-dark-grey leading-7">
           HTML • CSS • Javascript • React • Typescript
         </p>
       </div>
