--- a/src/components/main/project-card.astro
+++ b/src/components/main/project-card.astro
@@ -8,16 +8,14 @@ console.log(typeof image)
 ---
 
 <div>
-  <div class="mb-4 leading-7">
-    <Image
-      src={image}
-      alt={title}
-      height="500"
-      width="5000"
-      loading="eager"
-      class="object-fill"
-    />
-  </div>
+  <Image
+    src={image}
+    alt={title}
+    height="500"
+    width="5000"
+    loading="eager"
+    class="object-fill mb-4"
+  />
   <h3 class="font-bold text-2xl text-custom-dark-grey mb-1">{title}</h3>
   <p>{truncate(description, 80)}</p>
 </div>
