--- a/src/components/contact/contact-form.astro
+++ b/src/components/contact/contact-form.astro
@@ -1,4 +1,4 @@
-<form action="https://formbold.com/s/FORM_ID" method="POST">
+<form name="contact" method="POST" data-netlify="true">
   <div class="mb-5">
     <label for="name" class="mb-3 block text-base font-medium text-[#07074D]">
       Full Name
