--- a/src/components/contact/contact-form.astro
+++ b/src/components/contact/contact-form.astro
@@ -1,4 +1,9 @@
-<form name="contact" method="POST" data-netlify="true">
+<form
+  name="contact"
+  method="POST"
+  data-netlify="true"
+  action="pages/contact-success"
+>
   <div class="mb-5">
     <label for="name" class="mb-3 block text-base font-medium text-[#07074D]">
       Full Name
