changed contact form action to success page... testing success

--- a/src/components/contact/contact-form.astro
+++ b/src/components/contact/contact-form.astro
@@ -2,7 +2,7 @@
   name="contact"
   method="POST"
   data-netlify="true"
-  action="pages/contact-success"
+  action="/contact-success"
 >
   <div class="mb-5">
     <label for="name" class="mb-3 block text-base font-medium text-[#07074D]">
