--- a/src/components/contact/contact-form.astro
+++ b/src/components/contact/contact-form.astro
@@ -1,55 +1,46 @@
+---
+import { Button } from '../ui/button'
+---
+
 <form
   name="contact"
   method="POST"
   data-netlify="true"
   action="/contact-success"
 >
-  <div class="mb-5">
-    <label for="name" class="mb-3 block text-base font-medium text-[#07074D]">
-      Full Name
-    </label>
+  <div class="mb-8">
+    <label for="name" class="mb-1 block">Name</label>
     <input
       type="text"
       name="name"
       id="name"
-      placeholder="Full Name"
-      class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
+      placeholder="Your name"
+      class="w-full rounded-md border border-custom-light-grey bg-custom-light py-3 px-3 text-custom-dark-grey outline-none focus:border-custom-primary focus:shadow-md"
       required
     />
   </div>
-  <div class="mb-5">
-    <label for="email" class="mb-3 block text-base font-medium text-[#07074D]">
-      Email Address
-    </label>
+  <div class="mb-8">
+    <label for="email" class="mb-1 block"> Email Address </label>
     <input
       type="email"
       name="email"
       id="email"
-      placeholder="example@domain.com"
-      class="w-full rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
+      placeholder="Your email"
+      class="w-full rounded-md border border-custom-light-grey bg-custom-light py-3 px-3 text-base font-medium text-custom-dark-grey outline-none focus:border-custom-primary focus:shadow-md"
       required
     />
   </div>
-  <div class="mb-5">
-    <label
-      for="message"
-      class="mb-3 block text-base font-medium text-[#07074D]"
-    >
-      Message
-    </label>
+  <div class="mb-8">
+    <label for="message" class="mb-1 block"> Message </label>
     <textarea
       rows="4"
       name="message"
       id="message"
-      placeholder="Type your message"
-      class="w-full resize-none rounded-md border border-[#e0e0e0] bg-white py-3 px-6 text-base font-medium text-[#6B7280] outline-none focus:border-[#6A64F1] focus:shadow-md"
+      placeholder="Write your message here..."
+      class="w-full resize-none rounded-md border border-custom-light-grey bg-custom-light py-3 px-3 text-custom-dark-grey outline-none focus:border-custom-primary focus:shadow-md"
     ></textarea>
   </div>
   <div>
-    <button
-      class="hover:shadow-form rounded-md bg-[#6A64F1] py-3 px-8 text-base font-semibold text-white outline-none"
-    >
-      Submit
-    </button>
+    <Button>Send Email</Button>
   </div>
 </form>
