fixed broken resume link on about page, added _blank to resume link on mobile nav

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -109,6 +109,8 @@ import { Button } from '@/components/ui/button'
     </section>
 
     <!-- contact Btn -->
-    <Button>Download Full Resume</Button>
+    <Button asChild>
+      <a href="/chris-harley-resume.pdf">Download Full Resume</a>
+    </Button>
   </div>
 </Layout>
