--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -109,8 +109,9 @@ import { Button } from '@/components/ui/button'
     </section>
 
     <!-- contact Btn -->
-    <Button asChild>
-      <a href="/chris-harley-resume.pdf">Download Full Resume</a>
+    <Button>
+      <a href="/chris-harley-resume.pdf" target="_blank">Download Full Resume</a
+      >
     </Button>
   </div>
 </Layout>
