--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,24 +3,23 @@ import Layout from '../layouts/Layout.astro'
 import '../styles/globals.css'
 import ContactForm from '@/components/contact/contact-form.astro'
 import { Image } from 'astro:assets'
+import ContactSection from '@/components/contact/contact-section.astro'
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
-    <h1 class="text-5xl font-bold text-custom-dark-grey mb-10 mt-20">
-      Contact Page
-    </h1>
-
-    <section class="lg:grid lg:grid-cols-2 lg:gap-8">
-      <Image
-        src="https://utfs.io/f/3b6369ed-e022-4224-93bd-3a0682486ef3-7y87ma.png"
-        alt="Contact"
-        height="500"
-        width="5000"
-        loading="eager"
-        class="object-fill mb-10"
-      />
-      <ContactForm />
-    </section>
-  </main>
+  <h1 class="text-5xl font-bold text-custom-dark-grey mb-10 mt-20">
+    Contact Page
+  </h1>
+  <section class="lg:grid lg:grid-cols-2 lg:gap-8">
+    <Image
+      src="https://utfs.io/f/3b6369ed-e022-4224-93bd-3a0682486ef3-7y87ma.png"
+      alt="Contact"
+      height="500"
+      width="5000"
+      loading="eager"
+      class="object-fill mb-10"
+    />
+    <ContactForm />
+  </section>
+  <ContactSection />
 </Layout>
