--- a/src/pages/contact-success.astro
+++ b/src/pages/contact-success.astro
@@ -1,3 +1,15 @@
-<h1>Email Sent</h1>
-<p>Thank you for reaching out! I'll get back to you as soon as possible.</p>
-<a href="/">Go Back</a>
+---
+import Layout from '@/layouts/Layout.astro'
+import '../styles/globals.css'
+import { Button } from '@/components/ui/button'
+---
+
+<Layout title="Message sent successfully">
+  <section class="mt-20">
+    <h1 class="text-5xl text-custom-dark-grey font-bold mb-2">Email Sent</h1>
+    <p class="mb-8">
+      Thank you for reaching out! I'll get back to you as soon as possible.
+    </p>
+    <Button><a href="/">Go Back</a></Button>
+  </section>
+</Layout>
