--- a/src/components/contact/contact-section.astro
+++ b/src/components/contact/contact-section.astro
@@ -4,7 +4,7 @@ import { Button } from '../ui/button'
 
 <section class="mt-20">
   <p class="mb-2">Get in touch at...</p>
-  <h1 class="text-5xl font-bold mb-8">
+  <h1 class="text-2xl font-bold mb-8 sm:text-3xl md:text-4xl lg:text-5xl">
     <a href="">chrisharley81@gmail.com</a>
   </h1>
   <Button>
