fix mailto typo

--- a/src/components/contact/contact-section.astro
+++ b/src/components/contact/contact-section.astro
@@ -8,6 +8,6 @@ import { Button } from '../ui/button'
     <a href="">chrisharley81@gmail.com</a>
   </h1>
   <Button>
-    <a href="mailto:chrisharley81@gmail.com.com">Contact me</a>
+    <a href="mailto:chrisharley81@gmail.com">Contact me</a>
   </Button>
 </section>
