fixed contact page spacing issue

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ import ContactSection from '@/components/contact/contact-section.astro'
       height="500"
       width="5000"
       loading="eager"
-      class="object-fill mb-10"
+      class="object-fill mb-10 lg:mb-0"
     />
     <ContactForm />
   </section>
