--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import HeroSection from '@/components/main/hero-section.astro'
 import ProjectsSection from '@/components/main/projects-section.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Chris Harley | UX Designer">
   <HeroSection />
   <ProjectsSection />
   <ContactButton text="Let's Chat, I'm open for work!" />
