changed index styling to accomodate one project-card

--- a/src/components/main/hero-section.astro
+++ b/src/components/main/hero-section.astro
@@ -2,12 +2,11 @@
   <h1 class="text-5xl font-bold text-custom-dark-grey mb-2">CHRIS HARLEY</h1>
   <h3 class="mb-4">UX DESIGNER</h3>
   <p class="leading-7">
-    Lorem Ipsum has been the industry's standard dummy text ever since the
-    1500s, when an unknown printer took a galley of type and scrambled it to
-    make a type specimen book. It has survived not only five centuries, but also
-    the leap into electronic typesetting, remaining essentially unchanged. <span
-      ><a href="/contact" class="text-custom-primary font-bold"
-        >OPEN FOR WORK ←</a
+    UX Designer with a background in web development, combining technical
+    expertise with a passion for creating user-centered digital experiences, now
+    seeking to contribute to a dynamic team<span
+      ><a href="/contact" class="text-custom-primary font-bold">
+        OPEN FOR WORK</a
       >
     </span>
   </p>
