--- a/src/components/main/project-card.astro
+++ b/src/components/main/project-card.astro
@@ -3,18 +3,17 @@ import { Image } from 'astro:assets'
 import { truncate } from '../../lib/utils'
 
 const { title, image, description } = Astro.props
-
-console.log(typeof image)
 ---
 
 <div>
   <Image
     src={image}
     alt={title}
-    height="500"
-    width="5000"
+    width={500}
+    height={500}
     loading="eager"
-    class="object-fill mb-4"
+    class="mb-4"
+    inferSize
   />
   <h3 class="font-bold text-2xl text-custom-dark-grey mb-1">{title}</h3>
   <p>{truncate(description, 200)}</p>
