--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -39,7 +39,7 @@ import { Button } from '@/components/ui/button'
         unchanged.
       </p>
     </div>
-    <div class="w-ful">
+    <div class="w-full">
       <Image
         src="https://utfs.io/f/341a63a0-a7c6-4959-9450-64904198535c-pia5h.png"
         width="5000"
