fixed font-weight issue

--- a/src/pages/case-studies/mi-amors.astro
+++ b/src/pages/case-studies/mi-amors.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
-import Hero from '../../components/case-studies/mi-amors/hero.astro'
+import Hero from '@/components/case-studies/mi-amors/hero.astro'
+import Summary from '@/components/case-studies/mi-amors/summary.astro'
 ---
 
 <Layout title="Welcome to The Case Study for Mi Amor's">
   <section>
     <Hero />
-    <!-- summary -->
+    <Summary />
     <!-- overview -->
     <!-- problem statement -->
     <!-- users  -->
