--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,8 @@ import MainNavigation from '@/components/shared/main-navigation'
 import Footer from '@/components/shared/footer.astro'
 import { ViewTransitions } from 'astro:transitions'
 import Posthog from '@/components/posthog.astro'
-import '@fontsource/raleway'
+// Supports weights 100-900
+import '@fontsource-variable/raleway'
 
 interface Props {
   title: string
@@ -37,7 +38,7 @@ const { title } = Astro.props
     </div>
     <style>
       body {
-        font-family: 'Raleway';
+        font-family: 'Raleway Variable', sans-serif;
       }
     </style>
   </body>
