--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
     --custom-dark: #040a11;
     --custom-dark-grey: #5b7086;
     --custom-light-grey: #d3e1f0;
-    --background: 0 0% 100%;
+    --background: #333;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
