--- a/src/pages/case-studies/mi-amors.astro
+++ b/src/pages/case-studies/mi-amors.astro
@@ -1,25 +1,43 @@
 ---
 import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
-import Hero from '@/components/case-studies/mi-amors/hero.astro'
-import Summary from '@/components/case-studies/mi-amors/summary.astro'
-import Overview from '@/components/case-studies/mi-amors/overview.astro'
-
 import data from '../../data/casestudies/miamors.json'
+import {
+  Hero,
+  Summary,
+  Overview,
+  ProblemStatement,
+  Users
+} from '@/components/case-studies/mi-amors'
+import { User } from 'lucide-react'
 ---
 
 <Layout title="Welcome to The Case Study for Mi Amor's">
-  <section class="min-[616px]:max-w-[616px] mx-auto">
+  <section
+    class="min-[616px]:max-w-[616px] mx-auto min-[744px]:max-w-[744px] min-[1028px]:max-w-[1028px]"
+  >
     <Hero />
     <Summary />
-    <Overview
-      title={data.overview.title}
-      description={data.overview.description}
-      body={data.overview.body}
-    />
+    <div class="min-[1028px]:flex min-[1028px]:gap-8 min-[1028px]:items-start">
+      <Overview
+        title={data.overview.title}
+        description={data.overview.description}
+        body={data.overview.body}
+        size="sm"
+      />
+      <ProblemStatement
+        title={data.problemStatement.title}
+        description={data.problemStatement.description}
+        body={data.problemStatement.body}
+        size="sm"
+      />
+    </div>
 
-    <!-- problem statement -->
-    <!-- users  -->
+    <Users
+      title={data.users.title}
+      description={data.users.description}
+      body={data.users.body}
+    />
     <!-- role   -->
     <!-- constraints -->
     <!-- empathize  -->
