--- a/src/components/case-studies/mi-amors/users.astro
+++ b/src/components/case-studies/mi-amors/users.astro
@@ -4,9 +4,11 @@ import CasestudyTextsection from '@/components/shared/casestudy-textsection.astr
 const { title, description, body, size } = Astro.props
 ---
 
-<CasestudyTextsection
-  title={title}
-  description={description}
-  body={body}
-  size={size}
-/>
+<section>
+  <CasestudyTextsection
+    title={title}
+    description={description}
+    body={body}
+    size={size}
+  />
+</section>
