--- a/src/components/case-studies/mi-amors/role.astro
+++ b/src/components/case-studies/mi-amors/role.astro
@@ -14,8 +14,8 @@ const { title, description, body, size } = Astro.props
   />
   <div class="mt-8">
     <Image
-      src="https://utfs.io/f/itB1v1cNMItpejK6uwHr3wV8uPRDtSTLQKMfxsFUdnEjog4A"
-      alt="Image of UX Persona Techie Sam"
+      src="https://utfs.io/f/itB1v1cNMItpvPaTlg4HXNxS5KysO7wo8UFpdT3efMn4m0Zq"
+      alt="Image of the design thinking process steps"
       inferSize
     />
   </div>
