--- a/src/pages/case-studies/mi-amors.astro
+++ b/src/pages/case-studies/mi-amors.astro
@@ -8,7 +8,15 @@ import {
   Overview,
   ProblemStatement,
   Users,
-  Role
+  Role,
+  Constraints,
+  Define,
+  DesignSystem,
+  Empathize,
+  HighFidelity,
+  Ideate,
+  Prototype,
+  Testing
 } from '@/components/case-studies/mi-amors'
 ---
 
@@ -32,27 +40,32 @@ import {
         size="sm"
       />
     </div>
-
     <Users
       title={data.users.title}
       description={data.users.description}
       body={data.users.body}
     />
-
     <Role
       title={data.role.title}
       description={data.role.description}
       body={data.role.body}
     />
-
-    <!-- constraints -->
-    <!-- empathize  -->
-    <!-- define -->
-    <!-- ideate -->
-    <!-- prototype -->
-    <!-- testing  -->
-    <!-- design system -->
-    <!-- high-fidelity -->
+    <Constraints
+      title={data.constraints.title}
+      description={data.constraints.description}
+      body={data.constraints.body}
+    />
+    <Empathize
+      title={data.empathize.title}
+      description={data.empathize.description}
+      body={data.empathize.body}
+    />
+    <Define />
+    <Ideate />
+    <Prototype />
+    <Testing />
+    <DesignSystem />
+    <HighFidelity />
     <!-- prototype gif 2 -->
     <!-- contact section -->
   </section>
