define section complete

--- a/src/components/case-studies/mi-amors/empathize.astro
+++ b/src/components/case-studies/mi-amors/empathize.astro
@@ -27,13 +27,13 @@ const { title, description, body, size } = Astro.props
         <h3>Busy Professional Bryan</h3>
       </header>
       <ul class="mt-2 flex flex-col gap-4">
-        <li>The app’s slow performance makes it hard to order quickly'</li>
+        <li>• The app’s slow performance makes it hard to order quickly'</li>
         <li>
-          The checkout process is so complicated; it takes too long to place an
-          order.
+          • The checkout process is so complicated; it takes too long to place
+          an order.
         </li>
         <li>
-          The app’s navigation is confusing, and finding what I want is
+          • The app’s navigation is confusing, and finding what I want is
           difficult. I just want that app to be fast and simple to use.
         </li>
       </ul>
@@ -52,13 +52,14 @@ const { title, description, body, size } = Astro.props
         <h3>Family-Focused Fiona</h3>
       </header>
       <ul class="mt-2 flex flex-col gap-4">
-        <li>I need better filtering options for my dietary needs.</li>
+        <li>• I need better filtering options for my dietary needs.</li>
         <li>
-          I often host events and need the option to schedule orders in advance.
+          • I often host events and need the option to schedule orders in
+          advance.
         </li>
         <li>
-          I find that current apps lack of family meal options make it difficult
-          to order for my family especially on a budget.
+          • I find that current apps lack of family meal options make it
+          difficult to order for my family especially on a budget.
         </li>
       </ul>
     </div>
