--- a/src/pages/case-studies/mi-amors.astro
+++ b/src/pages/case-studies/mi-amors.astro
@@ -60,7 +60,11 @@ import {
       description={data.empathize.description}
       body={data.empathize.body}
     />
-    <Define />
+    <Define
+      title={data.define.title}
+      description={data.define.description}
+      body={data.define.body}
+    />
     <Ideate />
     <Prototype />
     <Testing />
