--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props
     <ViewTransitions />
     <Posthog />
   </head>
-  <body class="text-custom-dark bg-custom-light">
+  <body class="text-custom-dark bg-custom-light leading-loose">
     <div
       id="layout"
       class="flex flex-col min-h-screen mx-auto px-4 sm:max-w-[616px] md:max-w-[1028px]"
