--- a/src/components/case-studies/mi-amors/role.astro
+++ b/src/components/case-studies/mi-amors/role.astro
@@ -12,7 +12,7 @@ const { title, description, body, size } = Astro.props
     body={body}
     size={size}
   />
-  <div class="mt-8">
+  <div class="mt-2 max-w-[628px] mx-auto">
     <Image
       src="https://utfs.io/f/itB1v1cNMItpvPaTlg4HXNxS5KysO7wo8UFpdT3efMn4m0Zq"
       alt="Image of the design thinking process steps"
