--- a/src/components/case-studies/mi-amors/sketches.astro
+++ b/src/components/case-studies/mi-amors/sketches.astro
@@ -9,8 +9,8 @@ const { description, body, size } = Astro.props
   <CasestudyTextsection description={description} body={body} size={size} />
   <div class="mt-8">
     <Image
-      src="https://utfs.io/f/itB1v1cNMItpcFds1dQBz5jVYTIJ6on9a2UQWSipNCebrqRu"
-      alt="Image of UX Persona Techie Sam"
+      src="https://utfs.io/f/itB1v1cNMItpHfbm8eaYhPN7VEZDOjU2rKcH9L3fa5Bebi1T"
+      alt="hand drawn sketches of the mi amor's cafe app"
       inferSize
     />
   </div>
