--- a/src/pages/case-studies/mi-amors.astro
+++ b/src/pages/case-studies/mi-amors.astro
@@ -2,6 +2,7 @@
 import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
 import data from '../../data/casestudies/miamors.json'
+import ContactButton from '@/components/shared/contact-button.astro'
 import {
   Hero,
   Summary,
@@ -16,7 +17,9 @@ import {
   HighFidelity,
   Ideate,
   Prototype,
-  Testing
+  Testing,
+  Sketches,
+  Gif
 } from '@/components/case-studies/mi-amors'
 ---
 
@@ -60,17 +63,26 @@ import {
       description={data.empathize.description}
       body={data.empathize.body}
     />
-    <Define
-      title={data.define.title}
-      description={data.define.description}
-      body={data.define.body}
+    <Define description={data.define.description} body={data.define.body} />
+    <Ideate description={data.ideate.description} body={data.ideate.body} />
+    <Sketches
+      description={data.sketches.description}
+      body={data.sketches.body}
     />
-    <Ideate />
-    <Prototype />
-    <Testing />
-    <DesignSystem />
-    <HighFidelity />
-    <!-- prototype gif 2 -->
-    <!-- contact section -->
+    <Prototype
+      description={data.prototype.description}
+      body={data.prototype.body}
+    />
+    <Testing description={data.testing.description} body={data.testing.body} />
+    <DesignSystem
+      description={data.designSystem.description}
+      body={data.designSystem.body}
+    />
+    <HighFidelity
+      description={data.highFidelity.description}
+      body={data.highFidelity.body}
+    />
+    <Gif />
   </section>
+  <ContactButton text="Let's Chat, I'm open for work!" />
 </Layout>
