removed unused footer links, edited alts on several images

--- a/src/components/case-studies/mi-amors/prototype.astro
+++ b/src/components/case-studies/mi-amors/prototype.astro
@@ -10,7 +10,7 @@ const { description, body, size } = Astro.props
   <div class="mt-8">
     <Image
       src="https://utfs.io/f/itB1v1cNMItpibfHdWNMItpmlU8skfoNerjVHTuR1hGdcXYW"
-      alt="Image of UX Persona Techie Sam"
+      alt="High fidelity wireframe images of mi amor's cafe app"
       inferSize
     />
   </div>
