--- a/src/components/shared/footer.astro
+++ b/src/components/shared/footer.astro
@@ -3,7 +3,7 @@ import footerSocialLinks from '../../data/footer-social-links'
 ---
 
 <footer class="mt-20">
-  <div class="lg:flex lg:justify-between">
+  <div class="lg:flex lg:gap-4">
     <ul class="flex w-full justify-between mb-8 max-w-96">
       {
         footerSocialLinks.map((link) => (
