--- a/src/components/case-studies/mi-amors/high-fidelity.astro
+++ b/src/components/case-studies/mi-amors/high-fidelity.astro
@@ -10,7 +10,7 @@ const { description, body, size } = Astro.props
   <div class="mt-8">
     <Image
       src="https://utfs.io/f/itB1v1cNMItpWrEsEJy9SDPm3LUehqTVoF5jzEQslR0x6Jwn"
-      alt="Image of UX Persona Techie Sam"
+      alt="High fidelity images of mi amor's cafe app"
       inferSize
     />
   </div>
