--- a/src/components/main/hero-section.astro
+++ b/src/components/main/hero-section.astro
@@ -1,9 +1,13 @@
 <section class="mt-20 max-w-[800px]">
-  <h1 class="text-5xl font-bold text-custom-dark-grey mb-2">CHRIS HARLEY</h1>
-  <p class="leading-7">
-    UX Designer with a background in web development, combining technical
-    expertise with a passion for creating user-centered digital experiences, now
-    seeking to contribute to a dynamic team<span
+  <h1
+    class="text-5xl font-bold text-custom-dark-grey mb-2 min-[1028px]:text-6xl"
+  >
+    CHRIS HARLEY
+  </h1>
+  <p class="leading-7 min-[1028px]:text-lg">
+    UX Designer with 6+ years of web development expertise, trained in UX design
+    and passionate about crafting user-centered experiences that drive business
+    success—ready to contribute and grow with a dynamic team.<span
       ><a href="/contact" class="text-custom-primary font-bold">
         OPEN FOR WORK</a
       >
