fixed footer isues

--- a/src/components/case-studies/mi-amors/high-fidelity.astro
+++ b/src/components/case-studies/mi-amors/high-fidelity.astro
@@ -11,7 +11,7 @@ const { description, body, size } = Astro.props
     <Image
       src="https://utfs.io/f/itB1v1cNMItp8SeOR6n9IqMtk5oCu3Gch1Drz7mxTdKfXOil"
       alt="High fidelity images of mi amor's cafe app"
-      inferSize
+      inferSize={true}
     />
   </div>
 </section>
