--- a/src/components/main/project-card.astro
+++ b/src/components/main/project-card.astro
@@ -14,6 +14,6 @@ const { title, image, description, link } = Astro.props
     loading="lazy"
     inferSize
   />
-  <h3 class="font-bold text-2xl text-custom-dark-grey mb-1">{title}</h3>
+  <h3 class="font-bold text-2xl text-custom-dark-grey mt-4 mb-1">{title}</h3>
   <p>{truncate(description, 200)}</p>
 </a>
