--- a/src/components/case-studies/mi-amors/testing.astro
+++ b/src/components/case-studies/mi-amors/testing.astro
@@ -14,4 +14,11 @@ const { description, body, size } = Astro.props
       inferSize
     />
   </div>
+  <div class="mt-8">
+    <Image
+      src="https://utfs.io/f/itB1v1cNMItpPpKYHTg9yqtdEmwJsFuTXKx32O8hbk7gRQHi"
+      alt="Image of UX Persona Techie Sam"
+      inferSize
+    />
+  </div>
 </section>
