changed about and contact images to lazy loading

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,7 +46,7 @@ import { Button } from '@/components/ui/button'
         height="500"
         alt="Picture of Chris Harley"
         class="object-fill"
-        loading="eager"
+        loading="lazy"
       />
     </div>
   </section>
