--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,7 +16,7 @@ import ContactSection from '@/components/contact/contact-section.astro'
       alt="Contact"
       height="500"
       width="5000"
-      loading="eager"
+      loading="lazy"
       class="object-fill mb-10 lg:mb-0"
     />
     <ContactForm />
