updated all images to lazy loading

--- a/src/components/case-studies/mi-amors/design-system.astro
+++ b/src/components/case-studies/mi-amors/design-system.astro
@@ -12,6 +12,7 @@ const { description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItp9s3k35ETOxqIrSQkbojJU47gDfsmtLwM6V0n"
       alt="Image of UX Persona Techie Sam"
       inferSize
+      loading="lazy"
     />
   </div>
 </section>
