--- a/src/components/case-studies/mi-amors/hero.astro
+++ b/src/components/case-studies/mi-amors/hero.astro
@@ -22,5 +22,6 @@ import { Picture } from 'astro:assets'
     class="mx-auto min-[744px]:mx-0 min-[744px]:mr-auto: rounded-[45px] border-[10px] border-custom-dark-grey"
     inferSize
     pictureAttributes={{ style: 'margin-left: auto;' }}
+    loading="lazy"
   />
 </section>
