--- a/src/components/case-studies/mi-amors/ideate.astro
+++ b/src/components/case-studies/mi-amors/ideate.astro
@@ -12,6 +12,7 @@ const { description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItpGep20UfkOHresNcU7RVjupPSd6Ty9FxMztKQ"
       alt="Image of UX Persona Techie Sam"
       inferSize
+      loading="lazy"
     />
   </div>
 </section>
