--- a/src/components/case-studies/mi-amors/prototype.astro
+++ b/src/components/case-studies/mi-amors/prototype.astro
@@ -12,6 +12,7 @@ const { description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItpeiclEdKHr3wV8uPRDtSTLQKMfxsFUdnEjog4"
       alt="High fidelity wireframe images of mi amor's cafe app"
       inferSize
+      loading="lazy"
     />
   </div>
 </section>
