--- a/src/components/case-studies/mi-amors/role.astro
+++ b/src/components/case-studies/mi-amors/role.astro
@@ -17,6 +17,7 @@ const { title, description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItpvPaTlg4HXNxS5KysO7wo8UFpdT3efMn4m0Zq"
       alt="Image of the design thinking process steps"
       inferSize
+      loading="lazy"
     />
   </div>
 </section>
