--- a/src/components/case-studies/mi-amors/sketches.astro
+++ b/src/components/case-studies/mi-amors/sketches.astro
@@ -12,6 +12,7 @@ const { description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItpOI03MxY5xthbeuHyRm3PvVf4z6SOrspaLKFT"
       alt="hand drawn sketches of the mi amor's cafe app"
       inferSize
+      loading="lazy"
     />
   </div>
 </section>
