--- a/src/components/case-studies/mi-amors/testing.astro
+++ b/src/components/case-studies/mi-amors/testing.astro
@@ -12,6 +12,7 @@ const { description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItpQtCYEU2Gcb0Yx4grV1JINtMdaAnoeS5K3sUw"
       alt="Image of UX Persona Techie Sam"
       inferSize
+      loading="lazy"
     />
   </div>
   <div class="mt-8">
@@ -19,6 +20,7 @@ const { description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItpPpKYHTg9yqtdEmwJsFuTXKx32O8hbk7gRQHi"
       alt="Image of UX Persona Techie Sam"
       inferSize
+      loading="lazy"
     />
   </div>
 </section>
