--- a/src/components/case-studies/mi-amors/users.astro
+++ b/src/components/case-studies/mi-amors/users.astro
@@ -17,6 +17,7 @@ const { title, description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItpejK6uwHr3wV8uPRDtSTLQKMfxsFUdnEjog4A"
       alt="Image of UX Persona Techie Sam"
       inferSize
+      loading="lazy"
     />
   </div>
 </section>
