--- a/src/components/case-studies/mi-amors/high-fidelity.astro
+++ b/src/components/case-studies/mi-amors/high-fidelity.astro
@@ -12,6 +12,7 @@ const { description, body, size } = Astro.props
       src="https://utfs.io/f/itB1v1cNMItp8SeOR6n9IqMtk5oCu3Gch1Drz7mxTdKfXOil"
       alt="High fidelity images of mi amor's cafe app"
       inferSize={true}
+      loading="lazy"
     />
   </div>
 </section>
