--- a/src/components/shared/giffy.astro
+++ b/src/components/shared/giffy.astro
@@ -8,5 +8,6 @@ import Picture from 'astro/components/Picture.astro'
     alt="Anotehr GIF of the mi amors app prototype"
     class="mx-auto min-[744px]:mx-0 min-[744px]:mr-auto: rounded-[45px] border-[10px] border-custom-dark-grey"
     inferSize
+    loading="lazy"
   />
 </div>
